<resources>
    <string name="app_name">FastWheels</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recover_here">Recover Here</string>
    <string name="keep_me_logged_in">Keep me logged in.</string>
    <string name="password">Password</string>
    <string name="hintEmail">Username</string>
    <string name="rent_your_vehicle_today">rent your vehicle today</string>
    <string name="fast_wheels">FAST WHEELS</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search_button</string>
    <string name="assist_ncia">Assistência</string>
    <string name="user_profile">user profile</string>
    <string name="profile_password">password</string>
    <string name="profile_email">emails</string>
    <string name="profile_notifications">notifications</string>
    <string name="profile_name">Profile Name</string>
    <string name="profileemail_gmail_com">profileemail@gmail.com</string>
    <string name="profile_logout">Log Out</string>
    <string name="change_current_password">Change password</string>
    <string name="change_current_iban">Change IBAN</string>
    <string name="change_current_phone">Change Phone number</string>
    <string name="change_current_email">Change email</string>
    <string name="assistance">Assistance</string>
    <string name="vehicle_form_marca">Marca</string>
    <string name="vehicle_form_modelo">Modelo</string>
    <string name="vehicle_form_ano">Ano</string>
    <string name="vehicle_form_n_portas">Nº de portas</string>
    <string name="vehicle_form_morada">Morada Completa</string>
    <string name="vehicle_form_disponivel_de">Disponível de</string>
    <string name="vehicle_form_disponivel_ate">Disponível até</string>
    <string name="vehicle_form_btn_guardar">Guardar</string>
    <string name="vehicle_form_selecionar_fotografias">Adicionar fotografia</string>
    <string name="vehicle_form_codigo_postal">Código Postal</string>
    <string name="vehicle_list_marca">"Marca: "</string>
    <string name="vehicle_list_modelo">"Modelo: "</string>
    <string name="vehicle_list_ano">"Ano: "</string>
    <string name="vehicle_list_n_portas">"Nº de portas: "</string>
    <string name="vehicle_list_estado">"Estado: "</string>
    <string name="vehicle_form_cidade">Cidade</string>
    <string name="vehicle_image">Fotos do veículo</string>
    <string name="ndopen">ndOpen</string>
    <string name="ndclose">ndClose</string>
    <string name="vehicle_form_lista_foto_adicionada">Lista fotografia(s) adicionadas</string>
    <string name="dialog_enter_value">Enter value</string>
    <string name="vehicle_list_address">"Local: "</string>
    <string name="vehicle_details_price">Preço Dia</string>
    <string name="vehicle_details_brand">Marca</string>
    <string name="vehicle_details_model">Modelo</string>
    <string name="vehicle_details_year">Ano</string>
    <string name="vehicle_details_doors">Nº de portas</string>
    <string name="vehicle_details_address">Morada Completa</string>
    <string name="vehicle_details_postal_code">Código Postal</string>
    <string name="vehicle_details_city">Cidade</string>
    <string name="vehicle_details_available_from">Disponível de</string>
    <string name="vehicle_details_available_to">Disponível até</string>
    <string name="vehicle_list_preco">Preço: </string>
    <string name="item_reserver_price">Preço</string>
    <string name="string_notifications">Notifications</string>
    <string name="user_profile_toolbar">Profile</string>
    <string name="car_reviews">Avaliacoes</string>
    <string name="apagar_veiculo_reservado">Apagar reserva</string>
    <string name="add_reserved_veh_review">Adicionar Avaliação</string>
</resources>