<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Logo and App Name -->
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/fastwheelslogo" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/fast_wheels"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/rent_your_vehicle_today"
        android:textColor="@android:color/holo_green_light"
        android:textSize="14sp" />

    <!-- Email Field -->

    <!-- Password Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/emailIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_dialog_email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:hint="@string/hintEmail"
            android:text="fouser"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passwordIcon"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:src="@android:drawable/ic_lock_idle_lock" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:hint="@string/password"
            android:text="qweasdzxc"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Keep Me Logged In Checkbox -->
    <CheckBox
        android:id="@+id/keepLoggedInCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/keep_me_logged_in"
        android:textColor="@android:color/holo_green_light" />

    <!-- Login Button -->

    <!-- Forgot Password -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="handleLoginAccount"
        android:padding="12dp"
        android:text="LOGIN"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/alreadyRegisteredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgotPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/alreadyRegisterd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/recover_here"
            android:textColor="@android:color/holo_blue_light" />
    </LinearLayout>

</LinearLayout>
